--- a/Documents/TMDb/src/pages/home/home.html
+++ b/Documents/TMDb/src/pages/home/home.html
@@ -7,6 +7,7 @@
     <ion-tab [root]="tabHome" tabTitle="Peliculas" tabIcon="ios-videocam-outline"></ion-tab>
     <ion-tab [root]="tabSearch" tabTitle="Busqueda" tabIcon="ios-search-outline"></ion-tab>
     <ion-tab [root]="tabtv" tabTitle="Series" tabIcon="ios-desktop-outline"></ion-tab>
+    <ion-tab [root]="tabsettings" tabTitle="Configuracion" tabIcon="ios-cog"></ion-tab>
   </ion-tabs>
 
 </ion-content>
