--- a/Documents/TMDb/src/pages/series/series.html
+++ b/Documents/TMDb/src/pages/series/series.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>series</ion-title>
+    <ion-title>Series / TV Shows</ion-title>
   </ion-navbar>
 
 </ion-header>
