--- a/Documents/TMDb/src/pages/similar/similar.html
+++ b/Documents/TMDb/src/pages/similar/similar.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the SearchPage page.
+  Generated template for the SimilarPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,26 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-searchbar  animated [(ngModel)]="busqueda" (ionInput)="onInput($event)"></ion-searchbar>
+    <ion-title>similar</ion-title>
   </ion-navbar>
-  <ion-item>
-    <ion-label>Tipo</ion-label>
-    <ion-select [(ngModel)]="tipo">
-      <ion-option value="movie">Movies</ion-option>
-      <ion-option value="tv">Tv shows</ion-option>
-    </ion-select>
-  </ion-item>
-
-
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-item>
-    <button ion-button full color="primary" (click)="genero()">Buscar por genero</button>
-    
-  </ion-item>
 
   <ion-card *ngFor="let item of response?.results " (click)="info(item.id)">
     <img src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/{{item.poster_path}}">
@@ -49,5 +36,4 @@
     </ion-item>
 
   </ion-card>
-
 </ion-content>
